# typwrtr

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: deck.md  skill.md
src/: captions.css  captions.html  captions.ts  fixup.css  fixup.html  fixup.ts  main.ts  overlay.html  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  copy.rs  downloader.rs  lib.rs  llm_cleanup.rs  main.rs  paste.rs  recorder.rs  settings.rs  streaming.rs  transcribe_groq.rs  transcribe_local.rs  vad.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/cleanup/: mod.rs  scrub.rs
src-tauri/src/clipboard/: mod.rs  paste.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/context/: mod.rs
src-tauri/src/db/: corrections.rs  migrate.rs  mod.rs  profiles.rs  snippets.rs  stats.rs  transcriptions.rs  vocab.rs
src-tauri/src/learning/: diff.rs  focused_text.rs  mod.rs
src-tauri/src/postprocess/: mod.rs
src-tauri/src/transcribe/: mod.rs  parakeet.rs  whisper.rs
